# Bio

./: .gitignore  README.md  doxy.sh
Installation/: Installation and Usage.md
doxy/: 1.config
img/yaleface/test/: subject01.centerlight.png.sift  subject01.leftlight.png.sift  subject01.sad.png.sift  subject01.sleepy.png.sift  subject01.wink.png.sift  subject02.centerlight.png.sift  subject02.leftlight.png.sift  subject02.noglasses.png.sift  subject02.sad.png.sift  subject02.sleepy.png.sift  subject02.wink.png.sift  subject03.leftlight.png.sift  subject03.sad.png.sift  subject03.wink.png.sift  subject04.centerlight.png.sift  subject04.leftlight.png.sift  subject04.noglasses.png.sift  subject04.sleepy.png.sift  subject05.centerlight.png.sift  subject05.leftlight.png.sift  subject05.noglasses.png.sift  subject05.sad.png.sift  subject05.wink.png.sift  subject06.centerlight.png.sift  subject06.leftlight.png.sift  subject06.sad.png.sift  subject06.sleepy.png.sift  subject06.wink.png.sift  subject07.centerlight.png.sift  subject07.noglasses.png.sift  subject07.sad.png.sift  subject07.wink.png.sift  subject08.leftlight.png.sift  subject08.noglasses.png.sift  subject08.sad.png.sift  subject08.sleepy.png.sift  subject08.wink.png.sift  subject09.noglasses.png.sift  subject09.sad.png.sift  subject09.sleepy.png.sift  (+29 more)
img/yaleface/train/: subject01.glasses.png.sift  subject01.happy.png.sift  subject01.normal.png.sift  subject01.rightlight.png.sift  subject01.surprised.png.sift  subject02.glasses.png.sift  subject02.happy.png.sift  subject02.rightlight.png.sift  subject02.surprised.png.sift  subject03.glasses.png.sift  subject03.happy.png.sift  subject03.normal.png.sift  subject03.rightlight.png.sift  subject03.surprised.png.sift  subject04.glasses.png.sift  subject04.happy.png.sift  subject04.normal.png.sift  subject04.rightlight.png.sift  subject04.surprised.png.sift  subject05.glasses.png.sift  subject05.happy.png.sift  subject05.normal.png.sift  subject05.rightlight.png.sift  subject05.surprised.png.sift  subject06.glasses.png.sift  subject06.happy.png.sift  subject06.normal.png.sift  subject06.rightlight.png.sift  subject06.surprised.png.sift  subject07.glasses.png.sift  subject07.happy.png.sift  subject07.rightlight.png.sift  subject07.surprised.png.sift  subject08.glasses.png.sift  subject08.happy.png.sift  subject08.rightlight.png.sift  subject08.surprised.png.sift  subject09.glasses.png.sift  subject09.happy.png.sift  subject09.rightlight.png.sift  (+30 more)
manual/: Makefile  bk.tex  part2.aux  part2.bbl  part2.bib  part2.blg  part2.out  part2.tex  part2.toc
src/: .demo.cpp.swp  CMakeLists.txt  accuracyTest.cpp  camera.cpp  demo.cpp  demo.cpp.orig  detect.cpp  kd_demo.cpp  main.cpp  match2db.cpp  match2img.cpp
src/include/: .siftExtractor.h.swp  ImageSet.h  ImgFileName.h  SiftExtractor.h  SiftExtractor.h.orig  SiftMatcher.h  configure.h  configureFrontEnd.h  define.h  feature.h  imgSuffix.def  kdTree.h  siftConfigure.def  siftExtractor.h  tool.h
src/lib/: CMakeLists.txt  ImageSet.cpp  ImgFileName.cpp  SiftExtractor.cpp  SiftMatcher.cpp  feature.cpp  kdTree.cpp  tool.cpp
